# ESSC_4520_EX_HW

./: .breakpoints  .replit  L01_ex1.py  README.md  pyproject.toml
Ex/: L01_ex1.py  README.md
Ex/Ex2_con/: L07_ex2_con.txt
Ex/L01/: L01_ex1.py  L01_ex2&3.py  README.md
Ex/L02/: L02_Ex.xlsx
Ex/L03/: L03.py
Ex/L04/: L04_ex3.py
Ex/L05/: L05_ex1_2.py  L05_ex1_2_pltal.py  L05_ex3.py  L05_ex3_pltal.py  L05_ex4.py  L05_ex4_pltal.py
Ex/L05/Ex1/: L05_ex1.txt
Ex/L05/Ex3/: L05_ex3.txt
Ex/L05/Ex4_1/: L05_ex4_1_0.05.txt
Ex/L05/Ex4_2/: L05_ex4_2_0.2.txt
Ex/L05/Ex4_3/: L05_ex4_3_0.5.txt
Ex/L07/: L07_ex2.py  L07_ex2_3.py
Ex/L07/Ex2_2/: L07_ex2_2.txt
Ex/L07/Ex2_3/: L07_ex2_3.txt
Ex/L08/: L08_ex1.py
Ex/L09/: L09_ex.py
Ex/L10/: L10_ex.py  L10_ex_corr.py
Ex/L11/: L11_ex2.py
Useful_fn/: README.md  advection_schemes.py  bcs.py  plot_gif.py  print_table.py  round_sigfig.py
