[tool.poetry]
name = "repl_python3_ESSC4520EXHW"
version = "0.1.0"
description = ""
authors = ["cindywucuhk <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.0"
tabulate = "^0.8.9"
imageio = "^2.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
